added backend functionalities

--- a/car-management/src/main/resources/application.properties
+++ b/car-management/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=9092
+server.port=9094
 
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
@@ -22,6 +22,6 @@ spring.datasource.password=foreveryoung
 
 #app.product-catalog.url=http://localhost:9090
 #
-#spring.kafka.bootstrap-servers=localhost:9092
-#spring.kafka.consumer.group-id=productCatalog
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=car
 
