--- a/car/src/main/resources/application.properties
+++ b/car/src/main/resources/application.properties
@@ -19,8 +19,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/CarDb
 spring.datasource.username=postgres
 spring.datasource.password=foreveryoung
 
+spring.kafka.bootstrap-servers=http://localhost:9092
 
 #app.product-catalog.url=http://localhost:9090
-#
-#spring.kafka.bootstrap-servers=localhost:9092
-#spring.kafka.consumer.group-id=productCatalog
+spring.kafka.consumer.group-id=car
