--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -22,6 +22,6 @@ spring.datasource.password=foreveryoung
 
 #app.product-catalog.url=http://localhost:9090
 #
-#spring.kafka.bootstrap-servers=localhost:9092
-#spring.kafka.consumer.group-id=productCatalog
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=car
 
